--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,16 @@
 // === variables ===
 $color-white: #fff;
 $color-body: #414141;
+
+$screen-sm: 576px;
+$screen-md: 768px;
+$screen-lg: 992px;
+$screen-xl: 1200px;
+
+$screen-xs-max: 575px;
+$screen-sm-max: 767px;
+$screen-md-max: 991px;
+$screen-lg-max: 1199px;
 // / === variables ===
 
 // === common ===
@@ -27,8 +37,13 @@ body {
 }
 // === / common ===
 
+.section-outer {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
 .section-inner {
-    width: 1180px;
+    max-width: 1180px;
     margin: auto;
 }
 
@@ -171,7 +186,6 @@ body {
 
             &-input {
                 flex: 1;
-                padding-right: 40px;
 
                 input {
                     @include font-secondary;
@@ -196,6 +210,29 @@ body {
                     }
                 }
             }
+
+            @media (min-width: $screen-sm) {
+                &-input {
+                    margin-right: 40px;
+                }
+            }
+
+            @media (max-width: $screen-xs-max) {
+                flex-direction: column;
+
+                &-input {
+                    margin-bottom: 10px;
+                }
+
+                &-button {
+                    flex: 1;
+                }
+
+                .btn-main {
+                    display: block;
+                    width: 100%;
+                }
+            }
         }
     }
 }
@@ -218,8 +255,6 @@ body {
     }
 
     &__content {
-        padding-right: 90px;
-
         .title {
             margin-bottom: 56px;
             font-size: 32px;
@@ -238,6 +273,21 @@ body {
             height: auto;
         }
     }
+
+    @media (max-width: $screen-sm-max) {
+        flex-direction: column;
+
+        &__video {
+            order: -1;
+            margin-bottom: 20px;
+        }
+    }
+
+    @media (max-width: $screen-md) {
+        &_content {
+            padding-right: 90px;
+        }
+    }
 }
 
 .section-promo-2 {
@@ -247,8 +297,18 @@ body {
     text-align: center;
     border-top: 1px solid #e2e2e2;
 
-    .description-item + .description-item {
-        margin-left: 40px;
+    @media (min-width: $screen-sm) {
+        .description-item + .description-item {
+            margin-left: 40px;
+        }
+    }
+
+    @media (max-width: $screen-xs-max) {
+        flex-direction: column;
+
+        .description-item + .description-item {
+            margin-top: 40px;
+        }
     }
 }
 
@@ -265,13 +325,14 @@ body {
     }
 
     &__img {
+        img {
+            min-width: 100%;
+        }
+
         align-self: flex-end;
     }
 
     &__content {
-        align-self: center;
-        padding-left: 50px;
-
         &-text {
             @include font-secondary;
 
@@ -288,6 +349,34 @@ body {
         &-post {
             font-style: 20px;
             line-height: 29px;
+        }
+    }
+
+    @media (max-width: $screen-sm-max) {
+        .section-inner {
+            flex-direction: column;
+        }
+
+        &__img {
+            img {
+                max-width: 100%;
+            }
+        }
+
+        &__content {
+            order: -1;
+            margin-bottom: 40px;
+        }
+    }
+
+    @media (min-width: $screen-md) {
+        &__img {
+            align-self: flex-end;
+        }
+
+        &__content {
+            align-self: center;
+            padding-left: 50px;
         }
     }
 }
@@ -308,8 +397,7 @@ body {
     }
 
     &__subtitle {
-        width: 50%;
-        margin: 0 auto 80px;
+        margin-bottom: 80px;
         font-size: 16px;
         font-weight: 300;
         line-height: 28px;
@@ -358,6 +446,22 @@ body {
                 background-color: #f6fafd;
             }
         }
+
+        // @media (max-width: $screen-xs-max) {
+
+        // }
+
+        @media (max-width: $screen-xs-max) {
+            flex-direction: column;
+        }
+    }
+
+    @media (min-width: $screen-sm) {
+        &__subtitle {
+            width: 50%;
+            margin-right: auto;
+            margin-left: auto;
+        }
     }
 }
 
@@ -366,8 +470,6 @@ body {
 // ==free==
 
 .section-free {
-    padding-top: 121px;
-    padding-bottom: 120px;
     color: $color-white;
     text-align: center;
     background: linear-gradient(to right, #fe985b, #fe4fa7);
@@ -382,10 +484,23 @@ body {
     &__description {
         @include font-secondary;
 
-        width: 50%;
         margin: 0 auto 40px;
         font-size: 20px;
         line-height: 30px;
+    }
+
+    @media (min-width: $screen-lg) {
+        padding-top: 121px;
+        padding-bottom: 120px;
+
+        &__description {
+            width: 50%;
+        }
+    }
+
+    @media (max-width: $screen-md-max) {
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
 }
 
@@ -413,10 +528,6 @@ body {
         list-style: none;
 
         li {
-            & + li {
-                margin-left: 60px;
-            }
-
             a {
                 font-size: 14px;
                 font-weight: 700;
@@ -432,6 +543,25 @@ body {
                 }
             }
         }
+
+        @media (max-width: $screen-xs-max) {
+            flex-direction: column;
+            text-align: center;
+
+            li {
+                & + li {
+                    margin-top: 10px;
+                }
+            }
+        }
+
+        @media (min-width: $screen-sm) {
+            li {
+                & + li {
+                    margin-left: 60px;
+                }
+            }
+        }
     }
 
     &__copyright_and_links {
@@ -439,25 +569,33 @@ body {
 
         display: flex;
         justify-content: space-between;
-        width: 60%;
-        margin: 0 auto;
         font-size: 14px;
         line-height: 18px;
+
+        @media (min-width: $screen-xl) {
+            width: 60%;
+            margin: 0 auto;
+        }
+
+        @media (max-width: $screen-sm-max) {
+            flex-direction: column;
+            text-align: center;
+        }
     }
 }
 
 .helper-links {
-    display: flex;
+    justify-content: center;
     padding: 0;
     margin: 0;
     list-style: none;
 
-    li {
-        & + li {
+    .helper-links_item {
+        & + .helper-links_item {
             margin-left: 20px;
         }
 
-        a {
+        .helper-links_item-link {
             color: $color-body;
             text-decoration: none;
 
@@ -465,5 +603,14 @@ body {
                 text-decoration: underline;
             }
         }
+    }
+
+    @media (max-width: $screen-sm-max) {
+        display: inline-flex;
+        margin-top: 20px;
+    }
+
+    @media (min-width: $screen-md) {
+        display: flex;
     }
 }
